[YP-234] feat : 프로젝트 상세보기 내 작업물 발송 내역 추가 Jira: YP-234